--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@mui/material": "^5.11.16",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
+    "datatables.net-dt": "^1.13.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
+    "recharts": "^2.5.0",
     "sweetalert2": "^11.7.3"
   },
   "devDependencies": {
